# ml_ops_work

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yaml  code_check.yaml  dockar-img.yaml  dockerimg.yaml  testing.yaml  train-my-model.yaml
dockerfiles/: predict.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops/: .gitignore  classification_report.txt  data.dvc  predict_model.py  train_model.py  train_model_cml.py
mlops/conf/: model_conf.yaml  train_conf.yaml
mlops/data/: make_dataset.py  processed.dvc
mlops/lightning/: lightning_nn.py
mlops/models/: model.py  small_model.py
mlops/visualizations/: visualize.py
mlops/wandb/: latest-run
mlops/wandb/run-20240108_155603-je5wq31l/: run-je5wq31l.wandb
mlops/wandb/run-20240108_155603-je5wq31l/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
tests/: __init__.py  test_data.py  test_error.py  test_model.py
wandb/run-20240105_151054-mnpfllw4/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
